Fix the 2 failing tests and add notes